deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: klub-lotto
  labels:
    app.kubernetes.io/part-of: klub-lotto
